scripts/k8s/apps/01-flask/manifests/prod/4-Ingress/1-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  labels:
    app: fruit
    env: prod
    lab: a205
  annotations:
    kubernetes.io/ingress.global-static-ip-name: a205-hub-gclb
    #networking.gke.io/managed-certificates: a4-lab1-prod-fruit
    #networking.gke.io/v1beta1.FrontendConfig: a205-hub-ssl-policy-compatible
spec:
  rules:
  - host: mango.prod.lab
    http:
        paths:
        - path: /
          backend:
            serviceName: mango-svc
            servicePort: 80
  - host: orange.prod.lab
    http:
        paths:
        - path: /
          backend:
            serviceName: orange-svc
            servicePort: 80
  - host: fruit.prod.lab
    http:
        paths:
        - path: /mango
          backend:
            serviceName: fruit-svc
            servicePort: 80
        - path: /orange
          backend:
            serviceName: fruit-svc
            servicePort: 80
        - path: /
          backend:
            serviceName: fruit-svc
            servicePort: 80
